tests/spec/non_conformant/errors/fn_error/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-error"

#[allow(unused)]
use super::runner;

mod property;

mod ruleset;

mod simple;
